--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "openai": "^4.24.0",
+    "rot-js": "^2.2.0",
+    "sharp": "^0.33.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
