--- a/api/package.json
+++ b/api/package.json
@@ -10,17 +10,18 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
-    "openai": "^4.24.0",
-    "rot-js": "^2.2.0",
-    "sharp": "^0.33.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.24.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
+    "rot-js": "^2.2.0",
+    "sharp": "^0.33.2",
+    "socket.io-client": "^4.8.3",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
