--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,10 @@ services:
       GROQ_API_KEY: ${GROQ_API_KEY}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       FOUNDRY_URL: http://foundry:30000
-      FOUNDRY_ADMIN_KEY: ${FOUNDRY_ADMIN_KEY}
+      FOUNDRY_ADMIN_KEY: ${FOUNDRY_ADMIN_KEY:-admin}
+      FOUNDRY_WORLD: ${FOUNDRY_WORLD:-test}
+      FOUNDRY_GM_USER_ID: ${FOUNDRY_GM_USER_ID:-}
+      API_INTERNAL_URL: http://api:3001
     ports:
       - "3001:3001"
     volumes:
