--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,11 @@ services:
       FOUNDRY_ADMIN_KEY: ${FOUNDRY_ADMIN_KEY:-admin}
       FOUNDRY_USERNAME: ${FOUNDRY_USERNAME}
       FOUNDRY_PASSWORD: ${FOUNDRY_PASSWORD}
+      FOUNDRY_WORLD: ${FOUNDRY_WORLD:-test}
+      CONTAINER_PATCHES: /data/container_patches
     volumes:
       - foundry-data:/data
+      - ./foundry/container_patches:/data/container_patches:ro
     ports:
       - "30000:30000"
     networks:
