phase 6 completion and full documentation, mvp completed

--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,48 @@ FOUNDRY_USERNAME=your-foundry-username
 FOUNDRY_PASSWORD=your-foundry-password
 FOUNDRY_ADMIN_KEY=admin
 
-# Database
+# Database Configuration
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=lazy_foundry
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/lazy_foundry
 
-# API
+# Database Connection Pooling
+DB_POOL_MAX=20
+DB_POOL_MIN=5
+
+# API Server
 NODE_ENV=development
+PORT=3001
+
+# Authentication & Security
+# IMPORTANT: Generate a secure secret with: openssl rand -base64 32
 JWT_SECRET=change-this-secret-in-production
+JWT_EXPIRY=24h
+REFRESH_TOKEN_EXPIRY=7d
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:5173
+# ADDITIONAL_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # LLM API - Use ONE of these (Groq is free)
 GROQ_API_KEY=your-groq-api-key
 # OPENAI_API_KEY=your-openai-api-key
+
+# Foundry VTT Integration
+FOUNDRY_URL=http://foundry:30000
+
+# Logging
+LOG_LEVEL=info
+
+# Redis (for rate limiting and caching - optional in development)
+# REDIS_URL=redis://redis:6379
+# REDIS_PASSWORD=
+
+# Monitoring & Error Tracking (optional)
+# SENTRY_DSN=
+
+# Security Headers (production only)
+# SESSION_COOKIE_SECURE=true
+# SESSION_COOKIE_HTTPONLY=true
+
