permissions fix, doc fix

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,15 @@
 KEY=your-foundry-license-key
 FOUNDRY_USERNAME=your-foundry-username
 FOUNDRY_PASSWORD=your-foundry-password
+
+# Foundry VTT Admin Access
+# FOUNDRY_ADMIN_KEY: Password for Foundry's admin access
+# You'll use this to login to Foundry and create your GM user
+# Recommended: Use the same password for your GM user for simplicity
 FOUNDRY_ADMIN_KEY=admin
+
+# Foundry VTT World Configuration
+FOUNDRY_WORLD=test
 
 # Database Configuration
 DB_USER=postgres
